# byl_socket

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  client.cpp  magic_client.cpp  magic_server.cpp  server.cpp
src/: CMakeLists.txt  bylSocket.cpp  bylSocket.hpp  byl_socket.cpp  byl_socket.hpp  common.h  tmpl_socket.cpp  tmpl_socket.h  util.h
test/: CMakeLists.txt  test1.cpp
