add_executable(client client.cpp)
add_executable(server server.cpp)
add_executable(magic_client magic_client.cpp)
add_executable(magic_server magic_server.cpp)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
find_package(Threads)
message(STATUS "CMAKE_THREAD_LIBS_INIT is ${CMAKE_THREAD_LIBS_INIT}")
target_link_libraries(server ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(magic_server ${CMAKE_THREAD_LIBS_INIT})
target_link_libraries(client dynamic_bylSocket)
target_link_libraries(server dynamic_bylSocket)
target_link_libraries(magic_client dynamic_bylSocket)
target_link_libraries(magic_server dynamic_bylSocket)